--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,12 @@
     </dependency>
 
 
-
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>3.27.2</version>
+      <scope>test</scope>
+    </dependency>
 
 
 
